Changes to be committed: 	modified:   config.xml 	modified:   ionic.config.json 	modified:   package.json 	modified:   src/app/app.module.ts 	modified:   src/pages/list-master/list-master.html 	modified:   src/pages/list-master/list-master.ts 	modified:   src/pages/login/login.ts 	modified:   src/pages/signup/signup.ts 	modified:   src/providers/api/api.ts 	modified:   src/providers/providers.ts 	modified:   src/providers/user/user.ts  Untracked files: 	.sourcemaps/ 	src/providers/contact/ 	src/providers/contacts/ 	src/providers/globalvar/ 	src/providers/phonebook/ 	src/providers/phonebooks/

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -2,5 +2,7 @@
   "name": "mypb3",
   "app_id": "7cb55657",
   "type": "ionic-angular",
-  "integrations": {}
+  "integrations": {
+    "cordova": {}
+  }
 }
